bug 518244 move LoadProxyinfo to the main thread r=ted

--HG--
extra : rebase_source : 402d4a53ec72b8b9037e187dccbfbc8ecdb6300b